<resources>
    <string name="app_name">Xactitude</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</string>
    <string name="btn_reminder">Add Reminder</string>
    <string name="test">xactitude \n 2k15</string>
    <string name="reminderAdd">Reminder for the event has been added to your calendar. \n You will be reminded  15 minutes prior on the day of the Event.</string>
    <string name="likeApp">Like this App ?</string>
    <string name="interact">\t\tWhat can i help You with ? \n \n \tSomethings that you can ask me : \n
        \n " Q n A " :\n\t\t\t\twhat is Xactitude ? \n\t\t\t\tWhat is your name ?
        \n " Navigation " :\n\t\t\t\tWhere is LAB 1 ? \n\t\t\t\tWhere is mini audi ?
        \n " FAQ " :\n\t\t\t\tHow many eveny Events ? \n\t\t\t\tWhen are Results ? </string>
    <string name="xactitude">Xactitude 2K15 ?</string>
    <string name="x_desc">        Xactitude 2K15 launches on February 5th, with the theme, 
        ‘Integrating Intellectual Endeavours’.
        \n The students of the Computer Science Department are the
         Champions of Bangalore, winning just about every IT fest
          they have taken part in over the past four years. 
          \n\nXactitude 2K15 consists of 15 events, each requiring 
          a separate set of skills. Events like IT Manager, 
          IT Quiz and Statistics test the competitor on a variety 
          of different levels. \n\nGalaxia, our Science Exhibition Contest,
           also takes place at the same time, with projects on Maths, 
           Electronics, Statistics,Computer Science and Interactive that aims to pave 
           the way for the next great breakthrough, and foster innovation 
           in our students’ young minds.\n</string>
    <string name="staff_1">Mr.Prathap G \t \t \t \t\t+91 9036967080</string>
   <string name="staff_2">Mrs. Vani Chakraborty \t \t+91 9986278137</string>
    <string name="student_1">Mr.Kurian George \t \t\t\t+91 8050611198</string>
    <string name="student_2">Ms.Alexis Stefi \t \t\t\t\t+91 9739981417</string>
    <string name="help">Need Help ?</string>
    <string name="call">Technical Support</string>
    <string name="mail">Email Us</string>
    <string name="like">Like this App ?</string>
    <string name="spread">Spread the Word !</string>
    <string name="rate">Rate this App !</string>
    <string name="event1">IT Manager</string>
    <string name="event2">IT Quiz</string>
    <string name="event3">Lecture Contest</string>
    <string name="event4">Best Tech Team</string>
    <string name="event5">Coding and Debugging</string>
    <string name="event6">Web Designing</string>
    <string name="event7">Photoshop War</string>
    <string name="event8">Treasure Hunt</string>
    <string name="event9">Gaming</string>
    <string name="event10">Movie Making</string>
    <string name="event11">Electronics</string>
    <string name="event12">Stats Event</string>
    <string name="event13">Math Event</string>
    <string name="event14">Pick N Speak</string>
    <string name="event15">Exhibit Contest</string>
    <string name="tag_1">Fort-i-tude: The strength or firmness of mind.</string>
    <string name="tag_2">Alt-i-tude: Height of rank or excellence.</string>
    <string name="tag_3">Rect-i-tude:Exact conformity to truth.</string>
    <string name="tag_4">Mult-i-tude: The state of being many.</string>
    <string name="tag_5">Prompt-i-tude: The quality of being prompt.</string>
    <string name="tag_6">Pull-kri-tude: That quality of appearance which pleases the eye.</string>
    <string name="tag_7">Vi-siss-i-tude: Regular change or succession from one thing to another.</string>
    <string name="tag_8">Des-we-tude: The cessation of use.</string>
    <string name="tag_9">Hab-i-tude: Habit of body or of action.</string>
    <string name="tag_10">E-tude: A composition in the fine arts which may serve for a study.</string>
    <string name="tag_11">Sim-il-i-tude: That which is like or similar.</string>
    <string name="tag_12">Ver-i-sim-il-i-tude: the appearance of truth.</string>
    <string name="tag_13">In-fin-i-tude: The quality or state of being infinite or without limits.</string>
    <string name="tag_14">Pla-ti-tude: A remark or statement, especially one with a moral content.</string>
    <string name="tag_15">Plen-i-tude: The quality or state of being full or complete, abundance.</string>
    <string name="desc_1">IT Manager is one of the most prestigious and therefore one of the most difficult competitions of Xactitude 2K15. It consists of four rounds, each designed to test a particular facet of a manager\'s ability to do one thing: handle stress. Starting off with an aptitude test that pitches brainpower against time, the participants move on to the group discussion and stress task rounds that tests their assertiveness and ability to get a job done. Finally, those that remain are interviewed in front of hundreds of people to judge their ability to think quickly, answer succinctly, and beat the best to become Xactitude\'s IT manager.</string>
    <string name="desc_2">The one IT event that gives preference to Information over Technology, IT Quiz tests the participants on a variety of IT trivia that will separate the good from the great. Those that survive the gruelling written preliminary round will be taken to the main stage, where a host of different rounds will test their speed, accuracy, and ability to think under pressure when presented with auditory and visual clues.</string>
    <string name="desc_3">You do not truly know a subject until you can teach it to someone else. The Lecture Contest tests the participant\'s speaking ability as well as their knowledge of the subject. An audience favourite, as it brings future technology within the grasp of the possible.</string>
    <string name="desc_4">An event that will start before the real battle begins. Team effort and dedication is the only key to success, in this exciting event. Stay together, Stay awake, Work together to accomplish the goals. Team of three will have to cross various hurdles throughout the event to reach the victory stand.</string>
    <string name="desc_5">A cheeky play on words, promptitude is all about solving problems promptly from the command prompt, and proving to the world that solving complex problems by typing a few lines of code is not just an invention of Hollywood - it is a skill, honed to perfection by the very best.</string>
    <string name="desc_6">In an era where coding literacy is almost as important as that of spoken languages, perfection can only be truly achieved when one\'s code is beautiful - both in its aesthetic qualities and in its simplicity. The Web Design Competition tests one\'s ability to use code to make a useful, intuitive and beautiful website in under an hour.</string>
    <string name="desc_7">Testing your photoshopping skills at a professional level, Vicissitude takes the best morphers and Photoshop artists of India and pits them against time and each other. With only an hour to work in, there is no time for mistakes - only perfection.</string>
    <string name="desc_8">Our humble attempt at reversing the trend among IT professionals to abandon exercise and become sluggish. Desuetude takes the lost art of teamwork and exploration and combines it with quick wits to solve clues, eliminate possibilities and race towards treasure and glory. Don\'t be surprised to find yourself tapping long forgotten skills and thinking out of the box to solve some of the clues.</string>
    <string name="desc_9">If physical agility and strength have taken a backseat in the IT industry, mental acuity and superfast reaction time have definitely reached a new level among the scores of gamers that populate the leading IT companies of India. Only practice and teamwork will give you the skills necessary to emerge victorious from this winner-take-all competition.</string>
    <string name="desc_10">We all watch moves, but few of us are knowledgeable enough to notice the amazing cinematography and technique involved in the creation of even a five-second clip. If you are among the few who admires film making, is skilled at video editing and regards communication as an art-form, then this competition is for you.</string>
    <string name="desc_11">Theory is well and good, but when it all boils down to silicon and copper, only those with practical electronic knowledge can make the connections and create the circuits on which our whole world is run. The ability to recognise the similar, identify the incongruous and duplicate in reality what only exists on paper is the minimum requirements to excel in this competition.</string>
    <string name="desc_12">With data analysis looming on the horizon as a billion dollar enterprise, the expertise needed in statistics has also increased, promising to usher in a new era in the age of information. Accordingly, we have created a statistics mini-marathon, that starts off with an aptitude test, the completion of which moves you into a crossword round, ending with a quiz that tests every part of your knowledge in statistics.</string>
    <string name="desc_13">Bend your brain around some challenging Math puzzles that will set your mind whirling, and force you to think logically to deduce what may not be possible to derive. In the world of Mathematics, certainty is everything. How will you fare when you do not know what comes next, and have to expect the unexpected?</string>
    <string name="desc_14">A good speaker has a vast vocabulary. He chooses his words wisely. This event is for those, who play with words, to convey their ideas and thoughts effectively through to others, even in obscure situtations.</string>
    <string name="staff_coordinators">Staff Coordinators</string>
    <string name="in_1">Participants have to carry their college ID card and letter of authorization from the respective institution.</string>
	<string name="in_2">Participants have to register their name for an event without any time clash with other events.</string>
	<string name="in_3">Maximum of 15 participants per  college and only one team from a college is allowed.</string>
	<string name="in_4">Registration Fee Rs.1000/-  per college and Rs. 100/- for an individual.</string>
	<string name="in_5">Spot registration will be allowed.</string>
	<string name="in_6">Free accommodation and food will be provided for outstation colleges throughout the days of fest.</string>
	<string name="in_7">Visit Xactitude website for detailed event description and event coordinators\' details.</string>
</resources>